styles/main.css
body {
    margin-left: auto;
    margin-right: auto;
    font-family: Arial, Verdana;
    background-color: white;
    font-size: 14px;
}
#xopt {
    display: none;
}
#inst {
    margin-left: 12px;
    color: brown;
    text-decoration: underline;
}
/* The 'main' section view CSS items: */
#crypto {
    text-align: center;
    border-style: dotted;
    border-color: gray;
    border-width: 1px;
    border-color: gray;
    color: gray;
    height: 22px;
    padding-top: 4px;
}
#hadean {
    background-color: aliceblue;
}
#archean {
    background-color: honeydew;
}
#proto {
    background-color: cornsilk;
}
#phan {
    background-color: #ffe6e9;
}
#overall {
    text-align: center;
    font-size: 16px;
}
#percent {
    color: blue;
}
#box0 {
    float: left;
    height: 30px;
    margin-top: 4px;
}
#box1, #box3 {
    float: left;
    background-color: lightgray;
    border: 1px;
    height: 30px;
    margin-top: 4px;
}
#box2 {
    float: left;
    background-color: darkblue;
    border: 1px;
    height: 30px;
    margin-top: 4px;
}
/* The 'eon' section view CSS items: */
.clearfix {
    clear: both;
}
#eonview {
    display: none;
}
.eonht {
    padding-top: 6px;
}
.clicks {
    cursor: pointer;
}
#hadbox {
    border-style: inset;
    border-width: 2px;
}
#hadbox, #archbox, #protobox, #phanbox {
    height: 24px;
    display: none;
}
.maindivs, .eondivs, .eradivs {
    float: left;
    height: 24px;
    text-align: center;
    border-style: inset;
    border-width: 2px;
    margin: 0px;
    padding-top: 6px;
}
#eontext, #eratext, #periodtext {
    margin-top: 30px;
    margin-bottom: 2px;
    margin-left: 12px;
    font-size: 18px;
}
#eonadder, #eraadder {
    color: brown;
}
/* The 'era' section view CSS items: */
#eraview {
    display: none;
}
.eraht {
    padding-top: 6px;
}
/* The 'period' section view CSS items: */
#periodview {
    display: none;
}

